--- a/ancient_relationships/ancient_bibliography.bib
+++ b/ancient_relationships/ancient_bibliography.bib
@@ -340,3 +340,47 @@
   publisher={Genetics Soc America}
 }
 
+@article{rohde2004modelling,
+  title={Modelling the recent common ancestry of all living humans},
+  author={Rohde, Douglas LT and Olson, Steve and Chang, Joseph T},
+  journal={Nature},
+  volume={431},
+  number={7008},
+  pages={562},
+  year={2004},
+  publisher={Nature Publishing Group}
+}
+
+@article{chang1999recent,
+  title={Recent common ancestors of all present-day individuals},
+  author={Chang, Joseph T},
+  journal={Advances in Applied Probability},
+  volume={31},
+  number={4},
+  pages={1002--1026},
+  year={1999},
+  publisher={Cambridge University Press}
+}
+
+@article{baird2003distribution,
+  title={The distribution of surviving blocks of an ancestral genome},
+  author={Baird, SJE and Barton, NH and Etheridge, AM},
+  journal={Theoretical population biology},
+  volume={64},
+  number={4},
+  pages={451--471},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{donnelly1983probability,
+  title={The probability that related individuals share some section of genome identical by descent},
+  author={Donnelly, Kevin P},
+  journal={Theoretical population biology},
+  volume={23},
+  number={1},
+  pages={34--63},
+  year={1983},
+  publisher={Elsevier}
+}
+
